Fix the disastrous spacing on the footer heart

--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -17,7 +17,7 @@ body > footer {
     padding: 27.5% 0 72.5%;
     grid-column: 1 / span 1;
     position: relative;
-    font-size: 4vw;
+    font-size: 3.25vw;
     text-align: center;
     height: 0;
 
